# XiJian

./: .gitignore  LICENSE  README.md  build.sh  project.py
Config/: Config.json
core/: DESIGN.md  config.toml  pyproject.toml
core/scripts/: dev.ps1  dev.sh
core/tests/: conftest.py  test_auth.py  test_chat_abort.py  test_chat_stream_ndjson.py  test_chat_stream_sse.py  test_chat_sync.py  test_errors_dual_format.py  test_files.py  test_healthz.py  test_idempotency.py  test_mcp_server.py  test_mock_backend.py  test_models.py  test_openai_backend.py  test_root_version.py  test_ws.py  test_xijian_backups.py  test_xijian_character_state.py  test_xijian_characters.py  test_xijian_citations.py  test_xijian_devkit.py  test_xijian_economy.py  test_xijian_events.py  test_xijian_load_context.py  test_xijian_mcp.py  test_xijian_mcp_rules.py  test_xijian_memory.py  test_xijian_memory_decay.py  test_xijian_npcs.py  test_xijian_overload.py  test_xijian_pois.py  test_xijian_protection.py  test_xijian_recall_pipeline.py  test_xijian_safety.py  test_xijian_safety_rules.py  test_xijian_scene_interactions.py  test_xijian_transactions.py  test_xijian_travel_modes.py  test_xijian_wallets.py  test_xijian_world_currencies.py  (+1 more)
core/xijian_api/: __init__.py  __main__.py  abort.py  app.py  auth.py  config.py  errors.py  handshake.py  middleware.py  pagination.py  streaming.py
core/xijian_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
core/xijian_api/ai/: __init__.py  base.py  model_registry.py  registry.py  types.py
core/xijian_api/ai/backends/gguf/: chat.py  embedding.py  image.py  stt.py  tts.py  video.py
core/xijian_api/ai/backends/mlx/: chat.py  embedding.py  image.py  stt.py  tts.py  video.py
core/xijian_api/ai/backends/mock/: chat.py
core/xijian_api/ai/backends/openai/: _client.py  chat.py  embedding.py  image.py  stt.py  tts.py  video.py
core/xijian_api/devkit/: __init__.py  __main__.py  api.py  main.py  state.py
core/xijian_api/devkit/ui/: index.html
core/xijian_api/mcp/: __init__.py  prompts.py  protocol.py  registry.py  resources.py
core/xijian_api/mcp/tools/: __init__.py  characters.py  desktop.py  economy.py  events.py  files.py  memory.py  npcs.py  protection.py  sessions.py  settings.py  worlds.py
core/xijian_api/routes/: __init__.py  assistants.py  audio.py  batches.py  chat.py  completions.py  embeddings.py  files.py  fine_tuning.py  images.py  mcp_server.py  models.py  root.py  videos.py  ws_routes.py  xijian_backups.py  xijian_characters.py  xijian_economy.py  xijian_events.py  xijian_generation.py  xijian_interactions.py  xijian_mcp.py  xijian_memory.py  xijian_npcs.py  xijian_overload.py  xijian_protection.py  xijian_resources.py  xijian_safety.py  xijian_scenes.py  xijian_sessions.py  xijian_settings.py  xijian_worlds.py
core/xijian_api/stubs/: __init__.py  assistants.py  audio.py  batches.py  character_state.py  characters.py  chat.py  citations.py  devkit.py  economy.py  embedding.py  events.py  files.py  fine_tuning.py  image.py  interactions.py  mcp.py  mcp_rules.py  memory.py  memory_config.py  npcs.py  overload.py  pois.py  protection.py  resources.py  safety.py  safety_rules.py  scene_interactions.py  sessions.py  settings.py  snapshots.py  state.py  transactions.py  travel_modes.py  video.py  wallets.py  world_audit.py  world_compute_config.py  world_currencies.py  world_economy_state.py  (+2 more)
core/xijian_api/utils/: __init__.py  ids.py  log.py  time.py
devkit/: Problems.md  __init__.py  __main__.py  _vendor.py  ai_assistant.py  api.py  app.py  build-devkit.sh  character_editor.py  config.py  dialog_editor.py  main.py  memory_editor.py  model_viewer.py  motion_editor.py  persona_parser.py  plot_editor.py  pyproject.toml  requirements.txt  state.py  tts_engine.py  updater.py  version.py  voice_cloner.py  world_editor.py  xijian-devkit.spec
devkit/ai/: base.py  registry.py  types.py
devkit/ai/backends/mlx/: chat.py  tts.py
devkit/tests/: test_devkit.py
devkit/ui/: devkit.css  devkit.js  index.html  three-loader.js
(+44 files in other folders)
