[project]
name = "xijian-api"
version = "0.1.0"
description = "隙间 (XiJian) local Flask API server — core skeleton."
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0",
  "flask-sock>=0.7",
  "psutil>=5.9",
  "simple-websocket>=1.0",
  "waitress>=3.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8",
  "pytest-cov",
  "httpx>=0.27",
  "websocket-client>=1.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["xijian_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"