[project]
name = "xijian-api"
version = "0.1.0"
description = "隙间 (XiJian) local Flask API server — core skeleton."
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0",
  "flask-sock>=0.7",
  "psutil>=5.9",
  "simple-websocket>=1.0",
  "waitress>=3.0",
]

[project.optional-dependencies]
# GUI entry point for the Developer Kit (C5).  Heavy & platform-specific
# (pywebview pulls in PyObjC on macOS, pythonnet on Windows, webkitgtk
# on Linux), so it stays opt-in.
devkit = [
  "pywebview>=5.0",
  "py7zr>=0.21",
]
test = [
  "pytest>=8",
  "pytest-cov",
  "httpx>=0.27",
  "websocket-client>=1.7",
]
all = [
  "xijian-api[devkit,test]",
]

[project.scripts]
# Launches the standalone Developer Kit window (Pywebview).  Invoked
# from the 主程序 → 我的 → 开发者工具 → 打开独立窗口 flow documented
# in C0 of v2.2.
xijian-devkit = "xijian_api.devkit.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["xijian_api*"]

[tool.setuptools.package-data]
# Ship the DevKit UI assets inside the wheel so the window can be
# opened without bundling extra files alongside the wheel.
"xijian_api.devkit.ui" = ["*.html", "*.js", "*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"